--- a/src/NetSparkle.UI.WPF/CheckingForUpdatesWindow.xaml
+++ b/src/NetSparkle.UI.WPF/CheckingForUpdatesWindow.xaml
@@ -1,27 +1,42 @@
-﻿<Window x:Class="NetSparkleUpdater.UI.WPF.CheckingForUpdatesWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:NetSparkleUpdater.UI.WPF"
-        mc:Ignorable="d"
-        Width="400"
-        Height="175"
-        Title="Software Update"
-        ResizeMode="NoResize"
-        MaxWidth="400"
-        MaxHeight="175"
-        Name="CheckingForUpdateWindow"
-        d:DesignHeight="300"
-        d:DesignWidth="500" 
-        WindowStartupLocation="CenterScreen">
+﻿<xceed:Window x:Class="NetSparkleUpdater.UI.WPF.CheckingForUpdatesWindow"
+              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+              xmlns:local="clr-namespace:NetSparkleUpdater.UI.WPF"
+              xmlns:xceed="http://schemas.xceed.com/wpf/xaml/toolkit"
+              mc:Ignorable="d"
+              IsTopmostButton="False"
+              IsMinimizeButton="False"
+              BorderBrush="LightGray"
+              BorderThickness="1"
+              Width="400"
+              Height="155"
+              Title="软件更新"
+              ResizeMode="NoResize"
+              MaxWidth="400"
+              MaxHeight="155"
+              Name="CheckingForUpdateWindow"
+              d:DesignHeight="155"
+              d:DesignWidth="400"
+              WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary
+                    Source="pack://application:,,,/Xceed.Wpf.Toolkit;component/Style/ButtonStyle.xaml" />
+                <ResourceDictionary
+                    Source="pack://application:,,,/Xceed.Wpf.Toolkit;component/Style/ProgressBarStyle.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Image Grid.Row="0"
@@ -32,26 +47,26 @@
                Width="48"
                Height="48"
                Margin="10,10,0,0" />
-        <TextBlock Grid.Row="0" 
-                   Margin="5,5,5,5"
-                   Grid.Column="0"
-                   Text="Checking for Updates..."
-                   HorizontalAlignment="Center"
-                   FontWeight="Bold"
-                   FontSize="24" />
-        <ProgressBar Grid.Row="1"
-                     Grid.Column="0"
-                     IsIndeterminate="True"
-                     Height="25"
-                     Width="200"
-                     Margin="0,5,0,0" />
+        <Label Grid.Row="0"
+               Grid.Column="0"
+               Content="正在检查更新..."
+               HorizontalAlignment="Center"
+               FontWeight="Bold"
+               FontSize="24" />
+        <xceed:ProgressBar 
+            Grid.Row="1"
+            CornRadius="5"
+            Grid.Column="0"
+            IsIndeterminate="True"
+            Height="5"
+            Margin="10,5,10,0" />
         <Button Grid.Row="2"
                 Grid.Column="0"
-                Content="Cancel"
+                Content="取消"
                 FontSize="16"
                 Padding="10,5,10,5"
                 HorizontalAlignment="Center"
-                Margin="0,10,0,0"
+                Margin="0,10,0,10"
                 Click="CancelButton_Click" />
     </Grid>
-</Window>
+</xceed:Window>
