--- a/src/NetSparkle.UI.WPF/MessageNotificationWindow.xaml
+++ b/src/NetSparkle.UI.WPF/MessageNotificationWindow.xaml
@@ -1,18 +1,30 @@
-﻿<Window x:Class="NetSparkleUpdater.UI.WPF.MessageNotificationWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:NetSparkleUpdater.UI.WPF"
-        mc:Ignorable="d"
-        Width="400"
-        MaxWidth="400"
-        Title="Software Update"
-        ResizeMode="NoResize"
-        SizeToContent="Height"
-        d:DesignHeight="120"
-        d:DesignWidth="800" 
-        WindowStartupLocation="CenterScreen">
+﻿<xceed:Window x:Class="NetSparkleUpdater.UI.WPF.MessageNotificationWindow"
+              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+              xmlns:xceed="http://schemas.xceed.com/wpf/xaml/toolkit"
+              mc:Ignorable="d"
+              BorderBrush="LightGray"
+              BorderThickness="1"
+              Width="400"
+              MaxWidth="400"
+              Title="软件更新"
+              IsTopmostButton="False"
+              IsMinimizeButton="False"
+              ResizeMode="NoResize"
+              SizeToContent="Height"
+              d:DesignHeight="120"
+              d:DesignWidth="400"
+              WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary
+                    Source="pack://application:,,,/Xceed.Wpf.Toolkit;component/Style/ButtonStyle.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -27,11 +39,11 @@
                    Text="{Binding Message}"
                    HorizontalAlignment="Center"
                    FontSize="18" />
-        <Button Content="OK"
+        <Button Content="确定"
                 HorizontalAlignment="Center"
                 Padding="10,5,10,5"
                 Margin="0,10,0,10"
                 Grid.Row="1"
                 Click="Button_Click" />
     </Grid>
-</Window>
+</xceed:Window>
