修复版本没有正确显示的bug 修改提示语句位中文

--- a/src/NetSparkle.UI.WPF/DownloadProgressWindow.xaml
+++ b/src/NetSparkle.UI.WPF/DownloadProgressWindow.xaml
@@ -13,6 +13,8 @@
                      IsMinimizeButton="False"
                      Title="软件更新"
                      ResizeMode="NoResize"
+                     BorderBrush="LightGray"
+                     BorderThickness="1"
                      SizeToContent="Height"
                      x:Name="DownloadProgressWindowControl"
                      d:DesignHeight="250"
