--- a/src/NetSparkle.UI.WPF/MessageNotificationWindow.xaml
+++ b/src/NetSparkle.UI.WPF/MessageNotificationWindow.xaml
@@ -8,7 +8,8 @@
               BorderBrush="LightGray"
               BorderThickness="1"
               Width="400"
-              MaxWidth="400"
+              Height="120"
+              MaxHeight="400"
               Title="软件更新"
               IsTopmostButton="False"
               IsMinimizeButton="False"
